--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fddc9a">  <td>24/07/03 07:02:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp(java.lang.String,java.lang.String)[pri:0, instance:testCases.TC_006_ValidateServices_RequestAppointment_Profile_Services@3fffff43]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="996ee3">  <td>24/07/03 07:03:26</td>   <td>32565</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_006_ValidateServices_RequestAppointment_Profile_Services.validateServicesRequestAppointmentInProfilePage()[pri:0, instance:testCases.TC_006_ValidateServices_RequestAppointment_Profile_Services@3fffff43]">validateServicesRequestAppointmentInProfilePage</td> 
+<tr bgcolor="9e7ee8">  <td>24/07/03 23:38:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_006_ValidateServices_RequestAppointment_Profile_Services.validateServicesRequestAppointmentInProfilePage()[pri:0, instance:testCases.TC_006_ValidateServices_RequestAppointment_Profile_Services@6302bbb1]">validateServicesRequestAppointmentInProfilePage</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="fddc9a">  <td>24/07/03 07:04:08</td>   <td>74498</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:testCases.TC_006_ValidateServices_RequestAppointment_Profile_Services@3fffff43]">&lt;&lt;tearDown</td> 
+<tr bgcolor="73f5bc">  <td>24/07/03 23:39:22</td>   <td>41181</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:testCases.TC_006_ValidateServices_RequestAppointment_Profile_Services@6302bbb1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="73f5bc">  <td>24/07/03 23:38:14</td>   <td>-27064</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp(java.lang.String,java.lang.String)[pri:0, instance:testCases.TC_006_ValidateServices_RequestAppointment_Profile_Services@6302bbb1]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
 </table>
